--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,15 @@
 *.tar.gz
 *.rar
 
+# Unwanted folders and files
+.idea
+/.idea
+*/target/**
+/mvn
+/target/lib
+/target/maven-archiver
+/target/classes
+/target/maven-status
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
